--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>My Portfolio - Abdur Razzaq</title>
   </head>
-  <body>
+  <body className="bg-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
